# Mos-ru-task

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/alembic/: README  env.py
backend/alembic/versions/: 20260701_0001_create_demo_schema.py
backend/app/: main.py
backend/app/api/routes/: demo.py  health.py  lost_requests.py  stations.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/repositories/: found_items.py  lost_requests.py  request_matches.py  stations.py
backend/app/schemas/: demo.py  lost_requests.py  stations.py
backend/app/services/: claim_check.py  embedding_service.py  input_guard.py  matching.py  normalization.py  response_service.py
backend/app/telegram_bot/: __init__.py  backend_client.py  dates.py  formatting.py  handlers.py  keyboards.py  main.py  messages.py  states.py
backend/scripts/: fill_embeddings.py  seed_demo_db.py
tests/: test_claim_check_service.py  test_demo_schema.py  test_embedding_service.py  test_input_guard.py  test_matching_services.py  test_telegram_bot_helpers.py
