[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mos-ru-lost-items-demo"
version = "0.1.0"
description = "Demo stand for searching lost items in Moscow metro."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "SQLAlchemy>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "alembic>=1.14.0,<2.0.0",
    "pgvector>=0.3.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]

[tool.setuptools.packages.find]
where = ["backend"]
